--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -18,7 +18,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php: [7.4, 8.0, 8.1] # 7.2, 7.3,
+        php: [8.1, 8.2, 8.3, 8.4] # 7.2, 7.3,
         os: [ubuntu-latest, macOS-latest] # windows-latest,
 #        include: # will not testing on php 7.2
 #          - os: 'ubuntu-latest'
