--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,13 +7,11 @@ on:
 
 jobs:
   release:
-    name: Test on php ${{ matrix.php}}
+    name: Release new version
     runs-on: ubuntu-latest
     timeout-minutes: 10
     strategy:
       fail-fast: true
-      matrix:
-        php: [8.0]
 
     steps:
       - name: Checkout
@@ -24,28 +22,6 @@ jobs:
         run: |
           echo "RELEASE_TAG=${GITHUB_REF:10}" >> $GITHUB_ENV
           echo "RELEASE_NAME=$GITHUB_WORKFLOW" >> $GITHUB_ENV
-
-      # usage refer https://github.com/shivammathur/setup-php
-      - name: Setup PHP
-        timeout-minutes: 5
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: ${{ matrix.php}}
-          tools: pecl, php-cs-fixer, phpunit
-          extensions: mbstring, dom, fileinfo, mysql, openssl # , swoole-4.4.19 #optional, setup extensions
-          ini-values: post_max_size=56M, short_open_tag=On #optional, setup php.ini configuration
-          coverage: none #optional, setup coverage driver: xdebug, none
-
-      # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
-      # Docs: https://getcomposer.org/doc/articles/scripts.md
-
-      - name: Install dependencies # eg: v1.0.3
-        run: |
-          echo $RELEASE_TAG
-          echo $RELEASE_NAME
-          tag1=${GITHUB_REF#refs/*/}
-          echo "release tag: ${tag1}"
-          composer update --no-progress
 
       - name: Generate changelog
         run: |
